--- a/finch/static/finch/js/jquery/plugins/jquery-treeview/todo
+++ b/finch/static/finch/js/jquery/plugins/jquery-treeview/todo
@@ -1,1 +1,8 @@
-/data/work/django-revecms-pterk/revecms/revecms/static-includes/js/jquery/plugins/jquery-treeview/todo
+1.5
+---
+
+* add classes and rules for root items
+* lazy-loading: render the complete tree, but only apply hitzones and hiding of children to the first level on load
+* async treeview
+  * support animations
+  * support persist options
